Fixing brand logo spacing for small devices.

--- a/_scss/components/_navbar.scss
+++ b/_scss/components/_navbar.scss
@@ -7,10 +7,11 @@ nav.navbar {
 
     .navbar-brand {
         width: auto;
-        max-width: 75%;
+        max-width: 65%;
 
         img {
             width: 100%;
+            height: auto;
         }
     }
 
